Реализована общая группировка коллекции по одному или нескольким полям